# redland-bindings

./: .gitignore  Dockerfile  Makefile.am  configure.ac
.github/workflows/: R-CMD-check.yaml
R/: Dockerfile  Makefile.am  Makevars  NAMESPACE.in  README.md  Redland.i  cran-check-platforms.lis  createLibrdfDocs.R  librdfFunction.brew  swig.sh
R/redland/: .Rbuildignore  DESCRIPTION  NAMESPACE  NAMESPACE.librdf  NEWS  README.md  cleanup  configure  cran-comments.md
R/redland/R/: Model.R  Node.R  Parser.R  Query.R  QueryResults.R  Redland.R  Serializer.R  Statement.R  Storage.R  World.R  mergeNamespace_roclet.R  redland-package.R  redland.R  util.R  zzz.R
R/redland/inst/: CITATION  Makefile.am  Makefile.in  NEWS  NEWS.md  NOTICE  WORDLIST  configure  configure.ac
R/redland/inst/doc/: redland_overview.R  redland_overview.Rmd  redland_overview.html
R/redland/inst/testfiles/: dc.rdf
R/redland/inst/tests/: stressTest.R  test.Model.R  test.Node.R  test.Parser.R  test.Query.R  test.Serializer.R  test.Statement.R  test.Storage.R  test.World.R  test.librdf_free_statement.R  test.redland_base.R
R/redland/man/: Model-class.Rd  Model-initialize.Rd  Model.Rd  Node-class.Rd  Node-initialize.Rd  Parser-class.Rd  Parser-initialize.Rd  Query-class.Rd  Query-initialize.Rd  QueryResults-class.Rd  QueryResults-initialize.Rd  Serializer-class.Rd  Serializer-initialize.Rd  Statement-class.Rd  Statement-initialize.Rd  Statement.Rd  Storage-World-character-character-character-method.Rd  Storage-class.Rd  Storage-initialize.Rd  Storage.Rd  World-class.Rd  World-initialize.Rd  addStatement.Rd  destroy-ANY-method.Rd  executeQuery.Rd  freeModel.Rd  freeParser.Rd  freeQuery.Rd  freeQueryResults.Rd  freeSerializer-Serializer-method.Rd  freeSerializer.Rd  freeStatement.Rd  freeStorage.Rd  freeWorld.Rd  getBlankNodeId.Rd  getNextResult.Rd  getNodeType.Rd  getNodeValue.Rd  getQueryResultLimit.Rd  getQueryResultsLimit.Rd  (+249 more)
R/redland/src/: Makevars  Makevars.ucrt  Makevars.win  Redland_wrap.c  init.c  redland.c  registerDynamicSymbol.c  util.c
R/redland/tests/testthat/: test.Model.R  test.Node.R  test.Parser.R  test.Query.R  test.Serializer.R  test.Statement.R  test.Storage.R  test.World.R  test.redland_base.R
R/redland/tools/: configure  configure.ac
R/redland/vignettes/: redland_overview.Rmd
